k8s/09-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-service
  namespace: student-management
  labels:
    app: student-management
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 8089
    targetPort: 8089
    nodePort: 30089
    protocol: TCP
    name: http
  selector:
    app: student-management
    tier: backend
